--- a/package.json
+++ b/package.json
@@ -6,13 +6,18 @@
     "watch": "NODE_ENV=development webpack"
   },
   "dependencies": {
+    "@types/events": "^3.0.0",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "@types/uuid": "^8.3.4",
+    "events": "^3.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "ts-loader": "^9.3.1",
     "ts-node": "^10.9.1",
+    "typed-emitter": "^2.1.0",
     "typescript": "^4.7.4",
+    "uuid": "^8.3.2",
     "webpack": "^5.73.0"
   },
   "devDependencies": {
